--- a/currency converter/index.html
+++ b/currency converter/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Currency Converter App in JavaScript</title>
+    <title>Currency Converter</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- FontAweome CDN Link for Icons -->
@@ -22,7 +22,7 @@
             <p>From</p>
             <div class="select-box">
               <img src="https://flagcdn.com/48x36/us.png" alt="flag">
-              <select> <!-- Options tag are inserted from JavaScript --> </select>
+              <select> </select>
             </div>
           </div>
           <div class="icon"><i class="fas fa-exchange-alt"></i></div>
@@ -30,7 +30,7 @@
             <p>To</p>
             <div class="select-box">
               <img src="https://flagcdn.com/48x36/np.png" alt="flag">
-              <select> <!-- Options tag are inserted from JavaScript --> </select>
+              <select>  </select>
             </div>
           </div>
         </div>
